# FindingExcellence-PRO

./: .env.example  .gitignore  CHECKLIST.md  CHECK_OLLAMA.bat  CLAUDE.md  CONTRIBUTING.md  DOWNLOAD_MODELS.md  FINAL_STATUS_REPORT_2025.txt  LICENSE  MIGRATION_SUMMARY.md  NEXT_STEPS.md  OLLAMA_SETUP.md  OPTIMIZATION_STATUS.txt  QUICKSTART.txt  README.md  README_MIGRATION.md  SECURITY.md  STARTUP_GUIDE.txt  UX_ENHANCEMENTS_SUMMARY.txt  activate.bat  backend.spec  build.ps1  build.sh  download-models-v2.bat  download-models.bat  pull-models-fixed.bat  pull-models.bat  pyproject.toml  run-backend.bat  run-frontend.bat  setup-cmd.bat  setup-venv.bat  start-all.bat  start-everything.bat  start-simple.bat  start.bat  stop-all.bat  stop.bat  test-env.bat  test_ga4_data.csv  (+1 more)
.cache/: file_index.db
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: ask-question.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: BRAND_ASSETS_INDEX.md
backend/: main.py  pytest.ini  requirements.txt
backend/ai/: ai_services.py  batch_analyzer.py  chunking_service.py  data_analyzer.py  ner_service.py  ollama_client.py  openrouter_client.py  pii_service.py
backend/core/: __init__.py  config_manager.py  content_search.py  csv_handler.py  excel_handler.py  excel_processor.py  file_index.py  file_organizer.py  file_search.py  file_search_optimized.py  json_handler.py  markdown_handler.py  pdf_processor.py  polars_handler.py  powerpoint_handler.py  search_history.py  search_progress.py  text_handler.py  word_handler.py
backend/tests/: README.md  conftest.py  test_core.py  test_integration.py  test_perf_simple.py  test_performance_benchmark.py
backend/utils/: export.py  logging_setup.py
docs/: ACCESSIBILITY_FIX.md  DARK_MODE_ONLY.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION_STATUS.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  UI_REDESIGN.md  VERCEL_BUTTONS.md  free-models.md  python-windows-setup.md  security-coherence.md  setup.md
frontend/: .env.example  .gitignore  README.md  electron-builder.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/electron/: main.js  preload.js
frontend/src/: App.jsx  index.css
frontend/src/api/: backendClient.js
frontend/src/components/: AISearchPanel.jsx  ResultsTable.jsx  (+2 more)
frontend_desktop/: README.md  api_client.py  branding.py  main.py  requirements.txt
frontend_desktop/core/: __init__.py  file_search.py
frontend_desktop/ui/: __init__.py  analysis_panel.py  analysis_results_panel.py  interactive_results.py  main_window.py  organizer_panel.py  results_panel.py  search_panel.py  treeview_results.py
scripts/: convert_brand_assets.bat  convert_brand_assets.py
